2008-09-25  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (notify_notification): set urgency.
	(_setup_acceleration_key): don't process if accel key is "disabled".

	* applet/imsettings-applet.schemas.in: Escape characters reserved for
	markup language.

2008-09-24  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: check whether or not gconftool-2 is available.

	* tests/main.c (imsettings_test_restart_daemons_full): bring up
	im-settings-daemon in the tree as well.

	* src/factory.c (imsettings_manager_real_what_im_is_running): 
	return NULL if no info object available.

	* imsettings/imsettings-request.c (imsettings_request_get_info_object):
	return NULL if no info object available.

	* imsettings/imsettings-observer.c (imsettings_get_info_object): send
	an empty GString if no info object available.

	* applet/Makefile.am: ship and install imsettings-applet.schemas.

2008-09-21  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event): 
	just send back a key event if input-context is invalid. (rhbz#462899)

2008-09-15  Akira TAGOH  <tagoh@redhat.com>

	* README: Update.

	* data/none.in.in (GTK_IM_MODULE): set gtk-im-context-simple for default.

	* src/factory.c (imsettings_manager_real_stop_im): follow up the value
	in none.conf to set. then it could be customized.

2008-09-14  Akira TAGOH  <tagoh@redhat.com>

	* applet/imsettings-applet.schema: disable show_icon by default.

2008-09-13  Akira TAGOH  <tagoh@redhat.com>

	* tests/testcases/Makefile.am (dist-hook): support older automake.

	* Makefile.am (ACLOCAL_AMFLAGS): Fix an error on aclocal.

	* backends/xim/loopback.c (xim_loopback_real_xim_get_ic_values):
	deal with NESTEDLIST properly.
	(xim_loopback_real_xim_forward_event): reset modifiers state and
	keycode if the sequence is on the way.

	* backends/xim/loopback.c (xim_loopback_real_xim_close): Fix a build
	error on 32bit arch with gcc-4.1.3.
	(xim_loopback_real_xim_get_im_values): likewise.